<resources>
    <string name="app_name">lessonBle02</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="scanner_fragment_label">Scanner</string>
    <string name="device_fragment_label">BLE Device</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ble_unknown_name">Unknown Device</string>
    <string name="ble_default_address" translatable="false">00:00:00:00:00:00</string>
    <string name="ble_rssi_title" translatable="false">RSSI: %1$d</string>
    <string name="description_paired">Device Bond State</string>
    <string name="description_connectable">Is device connectable</string>
    <string name="scan_start">Start Scan</string>
    <string name="scan_stop">Stop Scan</string>
    <string name="to_scanner">To Scanner</string>
    <string name="scan_error">Error: %1$d</string>

</resources>